Colors and distortions are fixed around the site.

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,26 @@ body {
     overflow-x: hidden;
 }
 
+.body-projects {
+    width: 100%;
+    height: 100%;
+    background-color: #000e1d;
+    overflow-x: hidden;
+}
+
 html {
     height: 100%;
     width: 100%;
     scroll-behavior: smooth;
+}
+
+a {
+    color: #208039; /* Change the default link color to white */
+    text-decoration: none; /* Remove underline from links */
+}
+
+a:hover {
+    color: #33CC5B; /* Change the link color to a different color on hover */
 }
 
 ::-webkit-scrollbar {
@@ -50,6 +66,46 @@ html {
     background-position: center;
     position: fixed;
     z-index: -1;
+}
+
+#banner-projects {
+    width: 100%;
+    height: 100%;
+    background-image: url(../pictures/dna.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: fixed;
+    z-index: -1;
+}
+
+#infobanner {
+    margin-top: 250px;
+    /*max-height: calc(100vh - 250px); /* fit the given space */
+    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
+    background-color: #000;
+}
+
+#infobanner2 {
+    margin-top: 50px;
+    max-height: calc(100vh - 250px); /* fit the given space */
+    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
+    z-index: 1;
+    background-color: #000;
+}
+
+#infobanner-projects {
+    margin-top: 250px;
+    /*max-height: calc(100vh - 250px); /* fit the given space */
+    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
+    background-color: #03011C;
+}
+
+#infobanner2-projects {
+    margin-top: 50px;
+    max-height: calc(100vh - 250px); /* fit the given space */
+    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
+    z-index: 1;
+    background-color: #03011C;
 }
 
 #background,
@@ -173,17 +229,7 @@ h1 {
     height: 50px;
 }
 
-#infobanner {
-    margin-top: 250px;
-    /*max-height: calc(100vh - 250px); /* fit the given space */
-    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
-}
 
-#infobanner2 {
-    margin-top: 50px;
-    max-height: calc(100vh - 250px); /* fit the given space */
-    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
-}
 
 footer {
     bottom: 0px;
@@ -215,10 +261,10 @@ footer {
     height: 800px;
 }
 
-.col-md-3, .team {
+.team {
     height: 350px;
     width: 90%;
-    background-color: #16161C;
+    background-color: #802023;
     border-radius: 30px !important;
     padding: 20px;
     overflow: hidden;
